--- a/index.html
+++ b/index.html
@@ -13,50 +13,76 @@
 <body>
   <!-- Showcase -->
   <section class="showcase">
-    <div class="container">
-      <div class="circle"></div>
-      <!-- Header -->
-      <div class="toggle"></div>
-      <header class="main-header flex">
-        <a href="#"><img src="img/logo.png" alt="logo cocacola" class="logo"></a>
-        <!-- Nav -->
-        <nav class="main-nav flex">
-          <ul class="flex">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Menu</a></li>
-            <li><a href="#">What's new </a></li>
-            <li><a href="#">Contact</a></li>
-          </ul>
-        </nav>
-      </header>
+    <div class="circle"></div>
+    <!-- Header -->
+    <div class="toggle"></div>
+    <header class="main-header flex">
+      <a href="#"><img src="img/logo.png" alt="logo cocacola" class="logo"></a>
+      <!-- Nav -->
+      <nav class="main-nav flex">
+        <ul class="flex">
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Menu</a></li>
+          <li><a href="#">What's new </a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </nav>
+    </header>
 
-      <div class="content flex">
-        <div class="textbox">
-          <h2>Taste the feeling</h2>
-          <p>Coca-Cola is evolving its business strategy to become a total beverage company by giving people more of the
-            drinks they want – including low and no-sugar options across a wide array of categories – in more packages
-            sold in more locations.</p>
-          <a href="#" class="btn btn-primary">Learn More</a>
-        </div>
+    <div class="content flex">
+      <div class="textbox">
+        <h2>Taste the feeling</h2>
+        <p>Coca-Cola is evolving its business strategy to become a total beverage company by giving people more of the
+          drinks they want – including low and no-sugar options across a wide array of categories – in more packages
+          sold in more locations.</p>
+        <a href="#" class="btn btn-primary">Learn More</a>
+      </div>
 
-        <div class="imgbox">
-          <!-- Swiper -->
-          <div class="swiper-container">
-            <div class="swiper-wrapper">
-              <div class="swiper-slide"><img src="img/cocacola1.png" alt="cocacola image"></div>
-              <div class="swiper-slide"><img src="img/cocacola2.png" alt="cocacola image"></div>
-              <div class="swiper-slide"><img src="img/cocacola3.png" alt="cocacola image"></div>
-              <div class="swiper-slide"><img src="img/cocacola4.png" alt="cocacola image"></div>
-              <div class="swiper-slide"><img src="img/cocacola5.png" alt="cocacola image"></div>
-              <div class="swiper-slide"><img src="img/cocacola6.png" alt="cocacola image"></div>
-
-            </div>
+      <div class="imgbox">
+        <!-- Swiper -->
+        <div class="swiper-container">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide"><img src="img/cocacola1.png" alt="cocacola image"></div>
+            <div class="swiper-slide"><img src="img/cocacola2.png" alt="cocacola image"></div>
+            <div class="swiper-slide"><img src="img/cocacola3.png" alt="cocacola image"></div>
+            <div class="swiper-slide"><img src="img/cocacola4.png" alt="cocacola image"></div>
+            <div class="swiper-slide"><img src="img/cocacola5.png" alt="cocacola image"></div>
+            <div class="swiper-slide"><img src="img/cocacola6.png" alt="cocacola image"></div>
           </div>
         </div>
-
       </div>
+
+    </div>
   </section>
 
+  <!-- Section more -->
+  <section class="more">
+    <div class="container">
+      <h3>More to enjoy</h3>
+      <div class="more-content flex">
+        <div class="item">
+          <div>
+            <img src="img/introducing-coca-cola-orange-vanilla-328x159.jpg" alt="coca cola vanilla photo">
+          </div>
+          <a href="#">Introducing Orange Vanilla Coke and Orange Vanilla Coke Zero
+          </a>
+        </div>
+        <div class="item">
+          <div>
+            <img src="img/diet-coke-blueberry-strawberry-328x159.jpg" alt="diet code blueberry and strawberry">
+          </div>
+          <a href="#">Diet Coke Unveils New Flavors and Marketing Strategy
+          </a>
+        </div>
+        <div class="item">
+          <div>
+            <img src="img/coke-origins-328x159.jpg" alt="person drinking a bottle of coke">
+          </div>
+          <a href="#">Coke Leans Into Handcrafted Heritage With New Flavors</a>
+        </div>
+      </div>
+    </div>
+  </section>
   <!-- Footer -->
   <footer class="main-footer text-center">
     <div class="container">
