added second section more drinks

--- a/index.html
+++ b/index.html
@@ -81,6 +81,26 @@
           <a href="#">Coke Leans Into Handcrafted Heritage With New Flavors</a>
         </div>
       </div>
+
+      <h3>More drinks like this</h3>
+      <div class="drinks grid-2">
+        <div class="drink">
+          <img src="img/sprite-Original-282x700.png" alt="sprite bottle">
+          <a href="#">Sprite</a>
+        </div>
+        <div class="drink">
+          <img src="img/barqs-root-beer-282x130.png" alt="sprite bottle">
+          <a href="#">Barq's</a>
+        </div>
+        <div class="drink">
+          <img src="img/fresca-original-citrus-282x700.png" alt="barqs-root-beer">
+          <a href="#">Fresca</a>
+        </div>
+        <div class="drink">
+          <img src="img/fanta-orange-282x700.png" alt="fanta can">
+          <a href="#">Fanta</a>
+        </div>
+      </div>
     </div>
   </section>
   <!-- Footer -->
