added arrows in the showcase

--- a/index.html
+++ b/index.html
@@ -49,6 +49,12 @@
             <div class="swiper-slide"><img src="img/cocacola5.png" alt="cocacola image"></div>
             <div class="swiper-slide"><img src="img/cocacola6.png" alt="cocacola image"></div>
           </div>
+
+          <!-- Add Pagination -->
+          <!-- <div class="swiper-pagination"></div> -->
+          <!-- Add Arrows -->
+          <div class="swiper-button-next"></div>
+          <div class="swiper-button-prev"></div>
         </div>
       </div>
 
