--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
       <nav class="main-nav flex">
         <ul class="flex">
           <li><a href="#">Home</a></li>
-          <li><a href="#">Menu</a></li>
-          <li><a href="#">What's new </a></li>
+          <li><a href="#">History</a></li>
+          <li><a href="#">News</a></li>
           <li><a href="#">Contact</a></li>
         </ul>
       </nav>
@@ -70,21 +70,21 @@
           <div>
             <img src="img/introducing-coca-cola-orange-vanilla-328x159.jpg" alt="coca cola vanilla photo">
           </div>
-          <a href="#">Introducing Orange Vanilla Coke and Orange Vanilla Coke Zero
-          </a>
+          <a href="#">Orange Vanilla Coke and Orange Vanilla Coke Zero
+            <i class="arrow-icon"></i></a>
         </div>
         <div class="item">
           <div>
             <img src="img/diet-coke-blueberry-strawberry-328x159.jpg" alt="diet code blueberry and strawberry">
           </div>
           <a href="#">Diet Coke Unveils New Flavors and Marketing Strategy
-          </a>
+            <i class="arrow-icon"></i></a>
         </div>
         <div class="item">
           <div>
             <img src="img/coke-origins-328x159.jpg" alt="person drinking a bottle of coke">
           </div>
-          <a href="#">Coke Leans Into Handcrafted Heritage With New Flavors</a>
+          <a href="#">Coke Leans Into Handcrafted Heritage With New Flavors <i class="arrow-icon"></i></a>
         </div>
       </div>
 
