--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Coca Cola fictional landing page">
-  <title>Coca cola Landing Page</title>
+  <meta name="description" content="Ton SODA, a true memecoin on TON Blockchain">
+  <title>Welcome to Ton SODA</title>
   <link rel="shortcut icon" href="favicon.ico">
   <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
   <link rel="stylesheet" href="css/style.css">
@@ -23,8 +23,8 @@
         <ul class="flex">
           <li><a href="#">Home</a></li>
           <li><a href="#">History</a></li>
-          <li><a href="#">News</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="#">Dyor.io</a></li>
+          <li><a href="#">GeckoTerminal</a></li>
         </ul>
       </nav>
     </header>
