--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
     <!-- Header -->
     <div class="toggle"></div>
     <header class="main-header flex">
-      <a href="#"><img src="img/logo.png" alt="logo cocacola" class="logo"></a>
+      <a href="#"><img src="img/logo.png" alt="logo soda" class="logo"></a>
       <!-- Nav -->
       <nav class="main-nav flex">
         <ul class="flex">
           <li><a href="#">Home</a></li>
           <li><a href="#">History</a></li>
           <li><a href="#">Dyor.io</a></li>
-          <li><a href="#">GeckoTerminal</a></li>
+          <li><a href="https://www.geckoterminal.com/ton/pools/EQBl3GG0m1_jmIEAifH259gNy0G1oQhLVuyt6CKEw8cWbE8c">GeckoTerminal</a></li>
         </ul>
       </nav>
     </header>
@@ -32,10 +32,10 @@
     <div class="content flex">
       <div class="textbox">
         <h2>Taste the feeling</h2>
-        <p>Coca-Cola is evolving its business strategy to become a total beverage company by giving people more of the
-          drinks they want – including low and no-sugar options across a wide array of categories – in more packages
-          sold in more locations.</p>
-        <a href="#" class="btn btn-primary">Learn More</a>
+        <p>Ton SODA is evolving its fizzzzz strategy to become the top memecoin on Ton Blockchain by giving the community more of the
+          fun and togetherness they want – including low and no-sugar options across a wide array of anyone can build on SODA – in more packages
+          sold on DEX locations.</p>
+        <a href="#" class="btn btn-primary">Buy on Dedust</a>
       </div>
 
       <div class="imgbox">
