--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <ul class="flex">
           <li><a href="#">Home</a></li>
           <li><a href="#">History</a></li>
-          <li><a href="#">Dyor.io</a></li>
+          <li><a href="https://dyor.io/pl/token/EQA-pEj7rUbaKeIxj-jlJY7uMvcn3gE504zMglNCeIWlGv8u">Dyor.io</a></li>
           <li><a href="https://www.geckoterminal.com/ton/pools/EQBl3GG0m1_jmIEAifH259gNy0G1oQhLVuyt6CKEw8cWbE8c">GeckoTerminal</a></li>
         </ul>
       </nav>
