--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <p>Ton SODA is evolving its fizzzzz strategy to become the top memecoin on Ton Blockchain by giving the community more of the
           fun and togetherness they want – including low and no-sugar options across a wide array of anyone can build on SODA – in more packages
           sold on DEX locations.</p>
-        <a href="#" class="btn btn-primary">Buy on Dedust</a>
+        <a href="#" class="btn btn-warning">Buy on Dedust.io</a>   <a href="#" class="btn btn-warning">Buy on Ston.fi</a>
       </div>
 
       <div class="imgbox">
