--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <div class="content flex">
       <div class="textbox">
-        <h2>Taste the feeling</h2>
+        <h2>Sipping $SODA/h2>
         <p>Ton SODA is evolving its fizzzzz strategy to become the top memecoin on Ton Blockchain by giving the community more of the
           fun and togetherness they want – including low and no-sugar options across a wide array of anyone can build on SODA – in more packages
           sold on DEX locations.</p>
@@ -131,14 +131,12 @@
       <div class="footer-bottom flex">
         <nav class="social-nav">
           <ul class="flex social-links">
-            <li><a href="#"><img src="img/twitter.svg" alt="twitter logo"></a></li>
-            <li><a href="#"><img src="img/facebook.svg" alt="facebook logo"></a></li>
-            <li><a href="#"><img src="img/instagram.svg" alt="instagram logo"></a></li>
-            <li><a href="#"><img src="img/youtube.svg" alt="youtube logo logo"></a></li>
+            <li><a href="https://x.xom/TonSODA_tg"><img src="img/twitter.svg" alt="twitter logo"></a></li>
+            <li><a href="https://t.me/TonSODA"><img src="img/telegram.svg" alt="telegram logo"></a></li>
           </ul>
         </nav>
         <div>
-          <p>2021 The Coca-Cola Company. All Rights Reserved. </p>
+          <p>2024 Ton SODA Communiity  All Rights Reserved. </p>
           <a href="#">Privacy</a>
           <a href="#">Terms of Use </a>
           <a href="#">Do Not Sell My Personal Information</a>
