--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <div class="content flex">
       <div class="textbox">
-        <h2>Sipping $SODA/h2>
+        <h2>Sipping $SODA</h2>
         <p>Ton SODA is evolving its fizzzzz strategy to become the top memecoin on Ton Blockchain by giving the community more of the
           fun and togetherness they want – including low and no-sugar options across a wide array of anyone can build on SODA – in more packages
           sold on DEX locations.</p>
