--- a/index.html
+++ b/index.html
@@ -32,9 +32,8 @@
     <div class="content flex">
       <div class="textbox">
         <h2>Ton SODA</h2>
-        <p>Ton SODA (SODA) is evolving its fizzzzz strategy to become the top memecoin on Ton Blockchain by giving the community more of the
-          fun and togetherness they want – including low and no-sugar options across a wide array of anyone can build on SODA – in more packages
-          sold on DEX locations.</p>
+        <p>Ton SODA (SODA) is a pure meme jetton (token) on Ton Blockchain evolving its fizzzzz'eus strategy to become the top memecoin on Ton Blockchain by giving the community more of the
+          fun and togetherness they want sipping SODA. Including the low and no-sugar options across a wide array of ownership has been revoked, anyone can build on SODA in more packages and can buy and sell on DEX chillers.</p>
         <a href="#" class="btn btn-primary">Buy on Dedust.io</a>   <a href="#" class="btn btn-warning">Buy on Ston.fi</a>
       </div>
 
