--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
   <!-- Section more -->
   <section class="more">
     <div class="container">
-      <h3>More to enjoy</h3>
+      <h3>More to Enjoy (Roadmap)</h3>
       <div class="more-content flex">
         <div class="item">
           <div>
